# can-aes-encryption

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  aes.hpp  aes.ipp  column_iterator.hpp  column_iterator.ipp  config.yaml  final_report.html  galoistable.cpp  galoistable.hpp  journal.csv  journal.py  key_schedule.hpp  main.cpp  matrix.hpp  matrix.ipp  matrix_iterator.hpp  matrix_iterator.ipp  matrix_iterator_base.hpp  matrix_iterator_base.ipp  matrix_iterator_prototype.hpp  matrix_slice.hpp  readme.md  requirements.txt  row_iterator.hpp  row_iterator.ipp  sub_box.cpp  sub_box.hpp
src/: aes.hpp  aes.ipp  aes128.cpp  aes128.hpp  aes128.ipp  can_mat_adapter.cpp  can_mat_adapter.hpp  can_network.cpp  can_network.hpp  config.cpp  config.hpp  decrypt_entrypoint.cpp  encrypt_entrypoint.cpp  encrypt_network.cpp  encrypt_network.hpp  galoistable.cpp  galoistable.hpp  key_schedule.hpp  key_schudule.ipp  main.cpp  matrix.hpp  matrix.ipp  matrix_slice.hpp  matrix_slice.ipp  sub_box.hpp
test/: example_test.cpp
